--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,334 @@
-/* место для вашего кода */
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 180px;
+}
+
+/* header ---------------------------------------------------------------------*/
+
+.header {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  padding: 87px 50px;
+  font-size: 18px;
+}
+
+.header__link {
+  font-size: 18px;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.header__links-list {
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  }
+
+.header__link-list-item {
+  list-style: circle;
+  border-bottom: 1px solid #000;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+  border-bottom: none;
+}
+
+.header__link_active .header__link {
+  text-decoration: none;
+}
+
+.header__logo {
+  justify-self: center;
+  width: 148px;
+  height: 100%;
+}
+
+.header__logo-image {
+  width: 100%;
+}
+
+.header__address {
+  justify-self: end;
+  line-height: 24.3px;
+  font-style: normal 
+}
+
+/* cover ---------------------------------------------------------------------*/
+
+.cover {
+  position: relative;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 757px;
+}
+
+.overlay {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  background-color: #000000;
+}
+
+.cover__title {
+  position: absolute;
+  z-index: 1;
+  padding: 165px 50px;
+  width: 100%;
+  color: #fff;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 115%;
+  text-transform: uppercase; 
+  letter-spacing: 30px; 
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: normal;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  line-height: 140%;
+  text-align: center;
+}
+
+.aligned-text_right {
+  line-height: 1;
+  text-align: right;
+}
+
+.no-letter-spacing {
+  letter-spacing: normal;
+}
+
+.cover__description {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 78px;
+  padding: 659px 50px;
+}
+  
+.cover__description-text {
+  color: #FFF;
+  font-size: 22px;
+  line-height: 127%;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+  
+.bet-button {
+  border: 1px #FFF solid;
+  padding: 14px 32px;
+  color: #FFF;
+  font-size: 22px;
+  line-height: 1;
+  text-transform: uppercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+/* card's ---------------------------------------------------------------------*/
+
+.lots {
+  padding: 8px 50px 2px;
+}
+    
+.lots__heading {
+  padding: 0px 40px 27px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+  
+.lots__card-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
+  flex-grow: 1;
+  gap: 25px;
+  list-style: none;
+}
+  
+.lost__card-list-item {
+  min-height: 450px;
+  flex-grow: 1;    
+}
+  
+.card-link {
+  display: block;
+  height: 100%; 
+}
+  
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 450px;
+}
+  
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+  
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+  
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+  
+.card__title {
+  position: relative;
+  z-index: 1;
+  padding: 50px 40px 0px;
+  color: #FFF;
+  font-size: 22px;
+  line-height: 1.2;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+  }
+  
+.card__text {
+  position: relative;
+  padding: 0px 40px 50px;
+  z-index: 1;
+  color: #FFF;
+  font-size: 20px;
+  
+}
+  
+.lots__look-more-link {
+  display: block;
+  margin: 30px 0 0 40px;
+  font-size: 20px;
+  text-decoration-line: underline;
+  text-underline-position: under;
+}
+
+/* about --------------------------------------------------------------------- */
+
+.about {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 24px;
+  padding: 0px 50px;
+}
+  
+.about__column {
+  justify-self: center;
+}
+  
+.about__column_text {
+  grid-column: 2/4;
+}
+  
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: #000000;
+}
+  
+.about__logo-image {
+  width: 148px;
+}
+  
+.about__title {
+  padding: 100px 0;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+  
+.about__text {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.about__text p {
+  margin-bottom: 25px;    
+}
+
+/* footer --------------------------------------------------------------------- */
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);      
+  padding: 155px 50px 90px;
+  font-size: 18px;
+}
+    
+.footer__address {
+  font-weight: 400;
+  line-height: 24.3px;
+  font-style: normal;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column; 
+  text-align: center;
+}
+
+.footer__menu-link {
+  border-bottom: 1px solid #000;
+  text-decoration: none;
+}
+
+
+.footer__menu-list-item {
+  list-style: none;
+}
+
+
+.footer__menu-link_active {
+  border-bottom: none;
+}
+
+.footer__menu-link_active .footer__menu-link {
+  text-decoration: none;
+  
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  gap: 48px;
+  justify-content: end;
+  align-items: start;
+  list-style: none;
+}
+
+
+.footer__social-icon {
+  width: 48px;
+  height: 100%;
+}
