--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ main {
 .header__address {
   justify-self: end;
   line-height: 24.3px;
-  font-style: normal 
+  font-style: normal;
 }
 
 /* cover ---------------------------------------------------------------------*/
@@ -84,8 +84,8 @@ main {
   font-size: 100px;
   font-weight: 700;
   line-height: 115%;
-  text-transform: uppercase; 
-  letter-spacing: 30px; 
+  text-transform: uppercase;
+  letter-spacing: 30px;
 }
 
 .letter-spacing-extended {
@@ -108,10 +108,6 @@ main {
 .aligned-text_right {
   line-height: 1;
   text-align: right;
-}
-
-.no-letter-spacing {
-  letter-spacing: normal;
 }
 
 .cover__description {
@@ -168,12 +164,12 @@ main {
   
 .lost__card-list-item {
   min-height: 450px;
-  flex-grow: 1;    
+  flex-grow: 1;
 }
   
 .card-link {
   display: block;
-  height: 100%; 
+  height: 100%;
 }
   
 .card {
@@ -274,7 +270,7 @@ main {
 }
 
 .about__text p {
-  margin-bottom: 25px;    
+  margin-bottom: 25px;
 }
 
 /* footer --------------------------------------------------------------------- */
