--- a/styles/global.css
+++ b/styles/global.css
@@ -6,9 +6,10 @@
 
 body {
   min-width: 1100px;
-  margin: 0;
+  margin: auto;
   font-family: Raleway, sans-serif;
-  width: 1440px;
+  max-width: 1440px;
+
 }
 
 h1,
