--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
-  padding: 87px 50px;
+  padding: 92px 50px;
   font-size: 18px;
 }
 
@@ -42,7 +42,7 @@ main {
 
 .header__logo {
   justify-self: center;
-  width: 148px;
+  width: 135px;
   height: 100%;
 }
 
@@ -54,6 +54,7 @@ main {
   justify-self: end;
   line-height: 24.3px;
   font-style: normal;
+  width: 240px;
 }
 
 /* cover ---------------------------------------------------------------------*/
@@ -63,7 +64,7 @@ main {
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 757px;
+  background-position: center;
 }
 
 .overlay {
@@ -76,9 +77,9 @@ main {
 }
 
 .cover__title {
-  position: absolute;
+  position: relative;
   z-index: 1;
-  padding: 165px 50px;
+  padding: 165px 50px 137px;
   width: 100%;
   color: #fff;
   font-size: 100px;
@@ -117,7 +118,8 @@ main {
   justify-content: flex-end;
   align-items: center;
   gap: 78px;
-  padding: 659px 50px;
+  padding: 0px 50px 50px;
+  
 }
   
 .cover__description-text {
@@ -129,41 +131,38 @@ main {
 }
   
 .bet-button {
-  border: 1px #FFF solid;
-  padding: 14px 32px;
   color: #FFF;
+  border: 1px solid currentColor;
+  padding: 14px 32px;
   font-size: 22px;
   line-height: 1;
   text-transform: uppercase;
   background-color: transparent;
-  cursor: pointer;
+  
 }
 
 /* card's ---------------------------------------------------------------------*/
 
 .lots {
-  padding: 8px 50px 2px;
+  padding: 0px 50px;
 }
     
 .lots__heading {
   padding: 0px 40px 27px;
   font-weight: 700;
   font-size: 40px;
-  line-height: 1;
   text-transform: uppercase;
 }
   
 .lots__card-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: space-between;
-  flex-grow: 1;
   gap: 25px;
   list-style: none;
+  text-decoration: none;
 }
   
 .lost__card-list-item {
-  min-height: 450px;
   flex-grow: 1;
 }
   
@@ -177,25 +176,24 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 450px;
+  gap: 30px;
+  width: auto;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;  
 }
   
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
 }
   
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
 }
   
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
 }
   
 .card__title {
@@ -207,7 +205,7 @@ main {
   line-height: 1.2;
   text-decoration-line: underline;
   text-transform: uppercase;
-  }
+}
   
 .card__text {
   position: relative;
@@ -215,9 +213,8 @@ main {
   z-index: 1;
   color: #FFF;
   font-size: 20px;
-  
 }
-  
+
 .lots__look-more-link {
   display: block;
   margin: 30px 0 0 40px;
@@ -273,12 +270,16 @@ main {
   margin-bottom: 25px;
 }
 
+.about__text p:last-child {
+  margin-bottom: 0px;      
+}
+
 /* footer --------------------------------------------------------------------- */
 
 .footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);      
-  padding: 155px 50px 90px;
+  padding: 180px 50px 90px;
   font-size: 18px;
 }
     
@@ -286,6 +287,7 @@ main {
   font-weight: 400;
   line-height: 24.3px;
   font-style: normal;
+  width: 240px;
 }
 
 .footer__menu-list {
@@ -317,12 +319,11 @@ main {
 .footer__social-list {
   display: flex;
   flex-direction: row;
-  gap: 48px;
   justify-content: end;
   align-items: start;
   list-style: none;
+  gap: 48px;
 }
-
 
 .footer__social-icon {
   width: 48px;
